# project_p

./: CMakeLists.txt  data.db  main.cpp
ext/httplib/: httplib.h
ext/json/: json.hpp
ext/sqlite/: sqlite3.h
inc/: Utils.hpp
inc/database/: Database.hpp
inc/entities/: Activity.h  Admin.h  Student.h
inc/network/: Server.hpp
inc/repositories/: LocalDataRepository.hpp  LocalDataRepositoryImpl.hpp
src/: Utils.cpp
src/database/: Database.cpp
src/network/: Server.cpp
src/repositories/: LocalDataRepositoryImpl.cpp
